--- a/Vue-TodoList/package.json
+++ b/Vue-TodoList/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "mint-ui": "^2.2.13",
+    "ramda": "^0.25.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
